# Code-Clause-Internship-Artificial-Intelligence

./: .replit  README.md  advanced_personality_predictor.py  cv_personality_demo.py  demo_cv.txt  package-lock.json  package.json  personality_predictor.py  pyproject.toml  run_personality_demo.py
Tic-Tac-Toe with AI/: ai.py  app.py  utils.py
attached_assets/: Pasted-Build-a-personality-prediction-system-using-Python-that-can-analyze-a-CV-Curriculum-Vitae-or-resum-1748882634422.txt
client/src/: App.tsx  index.css
client/src/components/: adventure-card.tsx  bottom-navigation.tsx  category-filter.tsx  memory-book-modal.tsx  photo-grid.tsx  photo-modal.tsx  photo-upload.tsx
client/src/pages/: explore.tsx  home.tsx  memories.tsx  profile.tsx
models/: agreeableness_model.pkl  conscientiousness_model.pkl  extroversion_model.pkl  feature_names.pkl  neuroticism_model.pkl  openness_model.pkl  scaler.pkl
object_detection/: app.py  setup.py
object_detection/models/: download_models.py
object_detection/utils/: helpers.py
results/: personality_results.json
server/: routes.ts  storage.ts
shared/: schema.ts
